refactor(repository): 예외 처리 로직 서비스로 이전
- Repository의 예외 처리 로직 제거
- Service 계층에서 데이터 존재 여부 확인 및 예외 처리하도록 변경